samples/_failures_safe/1761616055_7eeecd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb140aa6.c: In function ‘main’:
./samples/SAFE/__tmp_eb140aa6.c:153:5: error: expected expression at end of input
  153 |     sm.data_count =
      |     ^~
./samples/SAFE/__tmp_eb140aa6.c:153:5: error: expected declaration or statement at end of input
